[package]
name = "releasetag"
version = "0.7.0"
authors = ["Frank Rehberger <frehberg@gmail.com>", "panicbit <panicbit.dev@gmail.com>"]
description = "Define releasetags being embedded in crash-files 'core'"
license = "Apache-2.0"
documentation = "https://github.com/frehberg/rust-releasetag"

[dependencies]
bytestool = "0.3.0"
