[package]
name = "releasetag"
version = "1.1.0"
authors = ["Frank Rehberger <frehberg@gmail.com>", "panicbit <panicbit.dev@gmail.com>"]
description = "Define releasetags eventually propagating into crash-files 'core'"
license = "Apache-2.0"
readme = "README.md"

documentation = "https://docs.rs/releasetag/"
homepage = "https://github.com/frehberg/rust-releasetag"
repository = "https://github.com/frehberg/rust-releasetag"
